--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h4>Mes formations</h4>
+    <ul>
+        <li>cyber sécurité</li>
+        <li>Developpement web</li>
+        <li>Intéligence artificiel</li>
+    </ul>
 </body>
 </html>
