mise en place de la section conpetances

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h4>MES COMPETENCES</h4>
+    <ul>
+        <li>Maitrise de Sécurité des systèmes et réseaux</li>
+        <li>Pentesting & Ethical Hacking</li>
+        <li>Cryptographie et gestion des identités</li>
+    </ul>    
 </body>
 </html>
