mise en place de la section associations

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h4>ASSOCIATION</h4>
+    <p> Étudier un malware pour comprendre son comportement.</p>
 </body>
 </html>
